feature: finish the home page style

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -23,6 +23,8 @@
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
 
   --hover-transition: all 0.3s ease;
+  --max-width: 1280px;
+
 }
 
 ::-webkit-scrollbar {
